  no longer required for runners, that`s all in xp-tools-${VERSION}.xar
  To run unittests on a released version, use the following:
  unittest -cp {VERSION}/lib/xp-net.xp_framework-{VERSION}.xar [tests]
  (friebe)

RFCs
~~~~
- Implemented RFC #0174 - io.collections interface additions / io.streams 
  integration
  (friebe)

Features
~~~~~~~~
- Added io.streams.ChannelInputStream and io.streams.ChannelOutputStream 
  classes that read from / write to stdin, stdout and stderr
  (friebe)
- Made peer.ftp.FtpConnection constructor accept not only strings but also
  peer.URL objects - same as in peer.http.HttpConnection
  (friebe)
- Implemented feature suggested in bug #31 - Allow Numbers in Scriptlet
  States
  (friebe)
- Added io.collections.ArchiveCollection class to work with XARs
  (friebe)
- Added support for enums to the Remote API (EASC)
  See http://news.xp-framework.net/article/287/2009/01/28/
  (hinckel, friebe)
- Made lang.XPClass::isSubclassOf() accept not only a string with the 
  classname but also XPClass objects
  (friebe)

Bugfixes
~~~~~~~~
- Fixed rdbms.mysql.MySQLDBAdapter did not handle '"' quotes (bug#34)
  (wagner)
- Fixed util.Date::hashCode() returns timestamp now instead of object id.
  (wagner)
- Made /proc lookup inside lang.Process::getProcessById() work on 
  FreeBSD 7 - the link is /proc/$PID/file instead of /proc/$PID/exe
  (friebe, wagner)
- Fixed bug #33 - Parse error for comments having a line ending with "]" 
  (friebe)
- Fixed io.File::write() and io.File::writeLine() to throw an IOException
  if the underlying file handle has been closed
  (friebe)
- Fixed io.streams.FileInputStream and io.streams.FileOutputStream not 
  to close underlying file when they get garbage-collected.
  (friebe)
- Fixed remote interface mapping when creating the remote interface in the
  remote API
  (hinckel)
- Fixed util.Locale::setDefault() fatalling when the given locale does
  not exist (and while trying to throw an exception).
  (friebe)